--- a/templates/base.html
+++ b/templates/base.html
@@ -54,17 +54,17 @@
                     <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                         <div class="navbar-nav mr-auto">
                             <a href="/" class="nav-item nav-link active">Home</a>
-                            <a href="/product-list" class="nav-item nav-link">Products</a>
-                            <a href="/product-detail" class="nav-item nav-link">Product Detail</a>
-                            <a href="/cart" class="nav-item nav-link">Cart</a>
-                            <a href="/checkout" class="nav-item nav-link">Checkout</a>
-                            <a href="/my-account" class="nav-item nav-link">My Account</a>
+                            <a href="product-list" class="nav-item nav-link">Products</a>
+                            <a href="product-detail" class="nav-item nav-link">Product Detail</a>
+                            <a href="cart" class="nav-item nav-link">Cart</a>
+                            <a href="checkout" class="nav-item nav-link">Checkout</a>
+                            <a href="my-account" class="nav-item nav-link">My Account</a>
                             <div class="nav-item dropdown">
                                 <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">More Pages</a>
                                 <div class="dropdown-menu">
-                                    <a href="/wishlist" class="dropdown-item">Wishlist</a>
-                                    <a href="/login" class="dropdown-item">Login & Register</a>
-                                    <a href="/contact" class="dropdown-item">Contact Us</a>
+                                    <a href="wishlist" class="dropdown-item">Wishlist</a>
+                                    <a href="login" class="dropdown-item">Login & Register</a>
+                                    <a href="contact" class="dropdown-item">Contact Us</a>
                                 </div>
                             </div>
                         </div>
