--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
-{% block content%}
+{% block content %}
         
         <!-- Breadcrumb Start -->
         <div class="breadcrumb-wrap">
@@ -18,13 +18,12 @@
         <div class="contact">
             <div class="container-fluid">
                 <div class="row">
-                    {% for info in information %}
                     <div class="col-lg-4">
                         <div class="contact-info">
-                            <h2>{{info.title}}</h2>
-                            <h3><i class="fa fa-{{info.logo}}"></i>{{info.office_address}}</h3>
-                            <h3><i class="fa fa-{{info.logo}}"></i>{{info.email}}</h3>
-                            <h3><i class="fa fa-{{info.logo}}"></i>{{info.phone}}</h3>
+                            <h2>Our Office</h2>
+                            <h3><i class="fa fa-map-marker"></i>123 Office, Los Angeles, CA, USA</h3>
+                            <h3><i class="fa fa-envelope"></i>office@example.com</h3>
+                            <h3><i class="fa fa-phone"></i>+123-456-7890</h3>
                             <div class="social">
                                 <a href=""><i class="fab fa-twitter"></i></a>
                                 <a href=""><i class="fab fa-facebook-f"></i></a>
@@ -34,15 +33,24 @@
                             </div>
                         </div>
                     </div>
-
-                        {% endfor %}
-
+                    <div class="col-lg-4">
+                        <div class="contact-info">
+                            <h2>Our Store</h2>
+                            <h3><i class="fa fa-map-marker"></i>123 Store, Los Angeles, CA, USA</h3>
+                            <h3><i class="fa fa-envelope"></i>store@example.com</h3>
+                            <h3><i class="fa fa-phone"></i>+123-456-7890</h3>
+                            <div class="social">
+                                <a href=""><i class="fab fa-twitter"></i></a>
+                                <a href=""><i class="fab fa-facebook-f"></i></a>
+                                <a href=""><i class="fab fa-linkedin-in"></i></a>
+                                <a href=""><i class="fab fa-instagram"></i></a>
+                                <a href=""><i class="fab fa-youtube"></i></a>
+                            </div>
+                        </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="contact-form">
-                            <form method="POST">
-                                {% csrf_token %}
-
+                            <form>
                                 <div class="row">
                                     <div class="col-md-6">
                                         <input type="text" class="form-control" placeholder="Your Name" />
@@ -71,4 +79,4 @@
         </div>
         <!-- Contact End -->
         
-    {% endblock %}
+     {% endblock %}
