login and signup are added

--- a/templates/brand.html
+++ b/templates/brand.html
@@ -24,11 +24,11 @@
                                 <div class="product-view-top">
                                     <div class="row">
                                         <div class="col-md-4">
-                                             <form method="GET" action="/search">
-                                                <div class="search">
-                                                    <input type="text" name="query" placeholder="Search">
-                                                    <button type="submit"><i class="fa fa-search"></i></button>
-                                                </div>
+                                            <form method="GET" action="/search">
+                                            <div class="product-search">
+                                                <input type="text" name="query" placeholder="Search">
+                                                <button type="submit"><i class="fa fa-search"></i></button>
+                                            </div>
                                              </form>
                                         </div>
                                         <div class="col-md-4">
