--- a/templates/index.html
+++ b/templates/index.html
@@ -280,7 +280,7 @@
                     <div class="col-lg-3">
                         <div class="product-item">
                             <div class="product-title">
-                                <a href="/details/{{new.slug}}">{{new.name}}</a>
+                                <a href="/details/{{new.slug}}" >{{new.name}}</a>
                                 <div class="ratting">
                                     <i class="fa fa-star"></i>
                                     <i class="fa fa-star"></i>
@@ -291,7 +291,7 @@
                             </div>
                             <div class="product-image">
                                 <a href="/details/{{new.slug}}">
-                                    <img src="{{new.image.url}}" alt="Product Image">
+                                    <img src="{{new.image.url}}" alt="Product Image" style="height:200px;">
                                 </a>
                                 <div class="product-action">
                                     <a href="#"><i class="fa fa-cart-plus"></i></a>
