--- a/templates/base.html
+++ b/templates/base.html
@@ -54,27 +54,22 @@
                     <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                         <div class="navbar-nav mr-auto">
                             <a href="/" class="nav-item nav-link active">Home</a>
-                            <a href="product-list" class="nav-item nav-link">Products</a>
-                            <a href="product-detail" class="nav-item nav-link">Product Detail</a>
-                            <a href="cart" class="nav-item nav-link">Cart</a>
-                            <a href="checkout" class="nav-item nav-link">Checkout</a>
-                            <a href="my-account" class="nav-item nav-link">My Account</a>
-                            <div class="nav-item dropdown">
-                                <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">More Pages</a>
-                                <div class="dropdown-menu">
-                                    <a href="wishlist" class="dropdown-item">Wishlist</a>
-                                    <a href="login" class="dropdown-item">Login & Register</a>
-                                    <a href="contact" class="dropdown-item">Contact Us</a>
-                                </div>
-                            </div>
                         </div>
                         <div class="navbar-nav ml-auto">
                             <div class="nav-item dropdown">
-                                <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">User Account</a>
+                                {% if user.is_authenticated %}
+                                <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">{{user.username}}</a>
                                 <div class="dropdown-menu">
-                                    <a href="#" class="dropdown-item">Login</a>
-                                    <a href="#" class="dropdown-item">Register</a>
+                                    <a href="/accounts/logout" class="dropdown-item">Logout</a>
                                 </div>
+                               {% else %}
+                                 <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">User Account</a>
+                                <div class="dropdown-menu">
+                                    <a href="/accounts/login" class="dropdown-item">Login</a>
+                                    <a href="/signup" class="dropdown-item">Register/Signup</a>
+                                </div>
+
+                                {% endif %}
                             </div>
                         </div>
                     </div>
