--- a/templates/product-detail.html
+++ b/templates/product-detail.html
@@ -18,30 +18,25 @@
         <div class="product-detail">
             <div class="container-fluid">
                 <div class="row">
+                    {% for detail in product_detail %}
                     <div class="col-lg-8">
                         <div class="product-detail-top">
                             <div class="row align-items-center">
                                 <div class="col-md-5">
                                     <div class="product-slider-single normal-slider">
-                                        <img src="{% static 'img/product-1.jpg' %}" alt="Product Image">
-                                        <img src="{% static 'img/product-3.jpg' %}" alt="Product Image">
-                                        <img src="{% static 'img/product-5.jpg' %}" alt="Product Image">
-                                        <img src="{% static 'img/product-7.jpg' %}" alt="Product Image">
-                                        <img src="{% static 'img/product-9.jpg' %}" alt="Product Image">
-                                        <img src="{% static 'img/product-10.jpg' %}" alt="Product Image">
+                                        {% for images in product_image %}
+                                        <img src="{{images.image.url}}" alt="Product Image">
+                                        {% endfor %}
                                     </div>
                                     <div class="product-slider-single-nav normal-slider">
-                                        <div class="slider-nav-img"><img src="{% static 'img/product-1.jpg' %}" alt="Product Image"></div>
-                                        <div class="slider-nav-img"><img src="{% static 'img/product-3.jpg' %}" alt="Product Image"></div>
-                                        <div class="slider-nav-img"><img src="{% static 'img/product-5.jpg' %}" alt="Product Image"></div>
-                                        <div class="slider-nav-img"><img src="{% static 'img/product-7.jpg' %}" alt="Product Image"></div>
-                                        <div class="slider-nav-img"><img src="{% static 'img/product-9.jpg' %}" alt="Product Image"></div>
-                                        <div class="slider-nav-img"><img src="{% static 'img/product-10.jpg' %}" alt="Product Image"></div>
+                                        {% for images in product_image %}
+                                        <div class="slider-nav-img"><img src="{{images.image.url}}" alt="Product Image"></div>
+                                        {% endfor %}
                                     </div>
                                 </div>
                                 <div class="col-md-7">
                                     <div class="product-content">
-                                        <div class="title"><h2>Product Name</h2></div>
+                                        <div class="title"><h2>{{detail.name}}</h2></div>
                                         <div class="ratting">
                                             <i class="fa fa-star"></i>
                                             <i class="fa fa-star"></i>
@@ -51,7 +46,11 @@
                                         </div>
                                         <div class="price">
                                             <h4>Price:</h4>
-                                            <p>$99 <span>$149</span></p>
+                                            {% if detail.discounted_price > 0 %}
+                                            <p>${{detail.discounted_price}} <span>${{detail.price}}</span></p>
+                                            {% else %}
+                                            <p>${{detail.price}}</p>
+                                            {% endif %}
                                         </div>
                                         <div class="quantity">
                                             <h4>Quantity:</h4>
@@ -105,17 +104,13 @@
                                     <div id="description" class="container tab-pane active">
                                         <h4>Product description</h4>
                                         <p>
-                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. In condimentum quam ac mi viverra dictum. In efficitur ipsum diam, at dignissim lorem tempor in. Vivamus tempor hendrerit finibus. Nulla tristique viverra nisl, sit amet bibendum ante suscipit non. Praesent in faucibus tellus, sed gravida lacus. Vivamus eu diam eros. Aliquam et sapien eget arcu rhoncus scelerisque. Suspendisse sit amet neque neque. Praesent suscipit et magna eu iaculis. Donec arcu libero, commodo ac est a, malesuada finibus dolor. Aenean in ex eu velit semper fermentum. In leo dui, aliquet sit amet eleifend sit amet, varius in turpis. Maecenas fermentum ut ligula at consectetur. Nullam et tortor leo. 
+                                           {{detail.description}}
                                         </p>
                                     </div>
                                     <div id="specification" class="container tab-pane fade">
                                         <h4>Product specification</h4>
                                         <ul>
-                                            <li>Lorem ipsum dolor sit amet</li>
-                                            <li>Lorem ipsum dolor sit amet</li>
-                                            <li>Lorem ipsum dolor sit amet</li>
-                                            <li>Lorem ipsum dolor sit amet</li>
-                                            <li>Lorem ipsum dolor sit amet</li>
+                                        {{detail.speciafication}}
                                         </ul>
                                     </div>
                                     <div id="reviews" class="container tab-pane fade">
@@ -167,11 +162,11 @@
                             </div>
 
                             <div class="row align-items-center product-slider product-slider-3">
-                                {% for product in product %}
-                                <div class="col-lg-3">
-                                    <div class="product-item">
+                                {% for product in subcat_product %}
+                                <div class="col-lg-3" >
+                                    <div class="product-item" >
                                         <div class="product-title">
-                                            <a href="#">Product Name</a>
+                                            <a href="/details/{{product.slug}}">{{product.name}}</a>
                                             <div class="ratting">
                                                 <i class="fa fa-star"></i>
                                                 <i class="fa fa-star"></i>
@@ -181,8 +176,8 @@
                                             </div>
                                         </div>
                                         <div class="product-image">
-                                            <a href="product-detail.html">
-                                                <img src="{% static 'img/product-10.jpg' %}" alt="Product Image">
+                                            <a href="/details/{{product.slug}}">
+                                                <img src="{{product.image.url}}" alt="Product Image" >
                                             </a>
                                             <div class="product-action">
                                                 <a href="#"><i class="fa fa-cart-plus"></i></a>
@@ -191,16 +186,20 @@
                                             </div>
                                         </div>
                                         <div class="product-price">
-                                            <h3><span>$</span>99</h3>
+                                                {% if product.discounted_price > 0 %}
+                                                 <h3><span>$</span>{{product.discounted_price}}</h3>
+                                                {% else %}
+                                               <h3><span>$</span>{{product.price}}</h3>
+                                               {% endif %}
                                             <a class="btn" href=""><i class="fa fa-shopping-cart"></i>Buy Now</a>
                                         </div>
                                     </div>
                                 </div>
-                                {%endfor%}
+                                {% endfor %}
                             </div>
                         </div>
                     </div>
-                    
+                    {% endfor %}
                     <!-- Side Bar Start -->
                     <div class="col-lg-4 sidebar">
                         <div class="sidebar-widget category">
